# cv-trivial

./: .gitignore
AffineTransform/: CMakeLists.txt  main.cpp
BackProjection/: CMakeLists.txt  main.cpp
BasicDrawing/: CMakeLists.txt  main.cpp
BasicImageContainerMat/: CMakeLists.txt  main.cpp
Blending/: CMakeLists.txt  main.cpp
Borders/: CMakeLists.txt  main.cpp
BoundingBoxCircle/: CMakeLists.txt  main.cpp
BoundingRotatedBoxEllipse/: CMakeLists.txt  main.cpp
Canny/: CMakeLists.txt  main.cpp
ChangeContrastBrightness/: CMakeLists.txt  main.cpp
Contours/: CMakeLists.txt  main.cpp
ConvexHull/: CMakeLists.txt  main.cpp
CreatingVideo/: CMakeLists.txt  main.cpp
DetectCornerInSubpixel/: CMakeLists.txt  main.cpp
ErodeDilate/: CMakeLists.txt  main.cpp
ExtractLines/: CMakeLists.txt  main.cpp
FeatureDescription/: CMakeLists.txt  main.cpp
FeatureDetection/: CMakeLists.txt  main.cpp
FileIO/: CMakeLists.txt  main.cpp
FourierTransform/: CMakeLists.txt  main.cpp
GeospatialRaster/: CMakeLists.txt  main.cpp
HarrisConerDetector/: CMakeLists.txt  main.cpp
HistogramCalculation/: CMakeLists.txt  main.cpp
HistogramComparison/: CMakeLists.txt  main.cpp
HistogramEqualization/: CMakeLists.txt  main.cpp
HoughCircleTransform/: CMakeLists.txt  main.cpp
HoughLineTransform/: CMakeLists.txt  main.cpp
ImagePyramids/: CMakeLists.txt  main.cpp
Laplace/: CMakeLists.txt  main.cpp
LinearFilters/: CMakeLists.txt  main.cpp
LoadAndDisplayImage/: CMakeLists.txt  main.cpp
Loop/: CMakeLists.txt  main.cpp
MacTest/: CMakeLists.txt  main.cpp
MaskOperations/: CMakeLists.txt  main.cpp
ModifyAndSave/: CMakeLists.txt  main.cpp
Moments/: CMakeLists.txt  main.cpp
Morphology/: CMakeLists.txt  main.cpp
Operations/: CMakeLists.txt  main.cpp
OwnCornerDetector/: CMakeLists.txt  main.cpp
PointPolygonTest/: CMakeLists.txt  main.cpp
Pyimshow/: drawing_functions.py  imshow.py  imwrite.py  mouse_callback.py  use_matplotlib.py
RandomGenerator/: CMakeLists.txt  main.cpp
Remapping/: CMakeLists.txt  main.cpp
ScanImages/: CMakeLists.txt  main.cpp
Segmentation/: CMakeLists.txt  main.cpp
Shi-Tomashi/: CMakeLists.txt  main.cpp
Smoothig/: CMakeLists.txt  main.cpp
Sobel/: CMakeLists.txt  main.cpp
TestOpenCVObjectiveC/: .gitignore
TestOpenCVObjectiveC/TestOpenCVObjectiveC/: AppDelegate.h  AppDelegate.m  ViewController.h  ViewController.mm  main.m
TestOpenCVObjectiveC/TestOpenCVObjectiveC.xcodeproj/: project.pbxproj
TestOpenCVObjectiveC/TestOpenCVObjectiveC.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
TestOpenCVObjectiveC/TestOpenCVObjectiveC.xcodeproj/project.xcworkspace/xcuserdata/a13891.xcuserdatad/: UserInterfaceState.xcuserstate
TestOpenCVObjectiveC/TestOpenCVObjectiveC.xcodeproj/xcuserdata/a13891.xcuserdatad/xcschemes/: TestOpenCVObjectiveC.xcscheme  xcschememanagement.plist
TestOpenCVSwift/: OpenCVWrapper.h  OpenCVWrapper.mm  TestOpenCVSwift-Bridging-Header.h
TestOpenCVSwift/TestOpenCVSwift/: AppDelegate.swift  ViewController.swift
TestOpenCVSwift/TestOpenCVSwift.xcodeproj/: project.pbxproj
TestOpenCVSwift/TestOpenCVSwift.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
TestOpenCVSwift/TestOpenCVSwift.xcodeproj/project.xcworkspace/xcuserdata/a13891.xcuserdatad/: UserInterfaceState.xcuserstate
TestOpenCVSwift/TestOpenCVSwift.xcodeproj/project.xcworkspace/xcuserdata/uedajunya.xcuserdatad/: UserInterfaceState.xcuserstate
TestOpenCVSwift/TestOpenCVSwift.xcodeproj/xcuserdata/uedajunya.xcuserdatad/xcschemes/: TestOpenCVSwift.xcscheme  xcschememanagement.plist
TestOpenCVSwift/TestOpenCVSwift/Base.lproj/: Main.storyboard
Thresholding/: CMakeLists.txt  main.cpp
Trackbar/: CMakeLists.txt  main.cpp
VideoSimilarityMeasurement/: CMakeLists.txt  main.cpp
